--- a/Part/Default/user/Userset/one.html
+++ b/Part/Default/user/Userset/one.html
@@ -3,7 +3,7 @@
     <div class='border border-5 rounded-3 bg-light border-light' style='display: inline-block;width:100%;max-width:600px;opacity:0.60'>
         <!--用户基础设置-->
         <div style="margin-top:10px">
-            <h4 class="text-info" style="text-align:left;margin-left:10%"><span>昵称：</span><span id='user_name'></span><span id='change_user_name'></span> <button id="change_user_name_button" onclick='Create_box("change_user_name","./Code/PHP/gy-con-change-name.php","user_name","user_name","change_user_name_button")' style='font-size:16px;background:none' class="rounded-circle border-0"><i class="bi bi-pencil"></i></button></h4>
+            <h4 class="text-info" style="text-align:left;margin-left:10%"><span>名字：</span><span id='user_name'></span><span id='change_user_name'></span> <button id="change_user_name_button" onclick='Create_box("change_user_name","./Code/PHP/gy-con-change-name.php","user_name","user_name","change_user_name_button")' style='font-size:16px;background:none' class="rounded-circle border-0"><i class="bi bi-pencil"></i></button></h4>
             <h4 class="text-info" style="text-align:left;margin-left:10%"><span>账号：</span><span id='user_id'></span></h4>
             <h4 class='text-info' style="text-align:left;margin-left:10%"><span>班级：</span><span id='class_name_show'></span></h4>
             <h4 class='text-info' style="text-align:left;margin-left:10%"><span>头像(QQ号)：</span><span id='show_qqimg'></span><span id='show_qq_get_img_change'></span>
