--- a/Part/Default/user/Navbar/one.html
+++ b/Part/Default/user/Navbar/one.html
@@ -69,7 +69,7 @@
                 
                 <hr>
                 
-                <button class='btn' onclick="Jump('/set')" ><span class='h4'><i class="bi bi-gear"></i> 用户设置</span></button>
+                <button class='btn' onclick="Jump('/set')" ><span class='h4'><i class="bi bi-gear"></i> 学生设置</span></button>
                 <br>
                 <button class='btn' onclick="Exit_user()" ><span class='h4'><i class="bi bi-person-circle" ></i> 退出登录</span></button>
             </div>
